--- a/selmaho.yml
+++ b/selmaho.yml
@@ -97,7 +97,7 @@ LOhO: 境界詞
 LOhU: 境界詞
 LU:
 MOI:
-NA命題肯定:
+NA: 命題肯定
   NAhE: 段階詞
 NU: 抽象詞
 PA*: 数量詞"
@@ -114,7 +114,7 @@ TAhE: 相制詞（時間・間隔）
 VUhU0: 数理演算子（n変数）
 VUhU1: 数理演算子（n変数）
 VUhU2: 数理演算子（単一項）　数理演算子（3変数）
-VUhU3: 数理演算子（単一項）VUhU3: 数理演算子（2変数）
+VUhU3: 数理演算子（2変数）
 
 ZAhO: 相制詞
 ZOI: 冠詞
