--- a/memo/thesaurus.yml
+++ b/memo/thesaurus.yml
@@ -1,14 +1,118 @@
-#
-11: 根源
-111001:
-112001:
-113001: 性質
-114001:
-#
-12: 関係
-121001:
-122001: 評価
-123001: 比較
-124001: 比較
-#
-13:
+構造: # (84)                                       - 14 - 46 - 24 -  0
+  - 群 # (18)                  -  3 -  7 -  8 -  0
+  - 混沌/秩序 # (13)           -  0 - 10 -  3 -  0
+  - 線形秩序 # (4)             -  0 -  2 -  2 -  0
+  - 範囲 # (9)                 -  0 -  5 -  4 -  0
+  - 比較 # (25)                -  3 - 16 -  6 -  0
+  - 数学 # (19)                -  8 -  7 -  4 -  0
+言語: # (118)                                      - 18 - 68 - 32 -  0
+  - 情報媒体 # (13)            -  4 -  8 -  1 -  0
+  - メッセージ # (16)          -  2 -  9 -  5 -  0
+  - コミュニケーション # (14)  -  2 - 10 -  2 -  0
+  - 認知 # (53)                -  5 - 32 - 16 -  0
+空間: # (108)                                      - 14 - 62 - 30 -  2
+  - 相対位置 # (28)            -  2 - 15 - 11 -  0
+  - 方向 # (3)                 -  0 -  3 -  0 -  0
+  - 寸法 # (9)                 -  2 -  4 -  1 -  2
+  - フォーム # (1)             -  0 -  0 -  1 -  0
+  - 点 # (3)                   -  0 -  1 -  2 -  0
+  - 線 # (16)                  -  2 - 11 -  3 -  0
+  - 本体 # (8)                 -  2 -  4 -  2 -  0
+  - 材質形状 # (32)            -  5 - 22 -  5 -  0
+時間: # (28)                                       -  6 - 16 -  6 -  0
+  - 日 # (6)                   -  1 -  3 -  2 -  0
+  - カレンダー # (10)          -  3 -  7 -  0 -  0
+  - 時計 # (5)                 -  2 -  2 -  1 -  0
+プロセス: # (81)                                   -  4 - 50 - 26 -  0
+  - 因果 # (10)                -  0 -  4 -  6 -  0
+  - 制御プロセス # (22)        -  0 - 17 -  5 -  0
+  - 対話活動 # (11)            -  0 -  7 -  3 -  0
+  - 争い # (8)                 -  1 -  3 -  4 -  0
+動作: # (90)                                       -  5 - 58 - 27 -  0
+  - 自己移動 # (39)            -  0 - 26 - 13 -  0
+    - 抽象概念 # (6)           -  0 -  4 -  2 -  0
+    - 活動的 # (18)            -  0 - 11 -  7 -  0
+    - 均衡 # (10)              -  0 -  8 -  2 -  0
+    - 受動的 # (5)             -  0 -  3 -  2 -  0
+  - 物体操作 # (49)            -  5 - 32 - 12 -  0
+    - 移動 # (19)              -  0 - 11 -  8 -  0
+    - 面 # (13)                -  2 -  9 -  2 -  0
+    - 量 # (6)                 -  1 -  5 -  0 -  0
+    - 流体 # (5)               -  2 -  2 -  1 -  0
+物理世界: # (122)                                  - 16 - 91 - 15 -  0
+  - オントロジー # (7)         -  1 -  6 -  0 -  0
+  - 基本概念 # (8)             -  0 -  7 -  1 -  0
+  - 物性 # (23)                -  2 - 19 -  2 -  0
+  - 計測 # (40)                -  4 - 32 -  4 -  0
+    - メトリック # (9)         -  0 -  7 -  2 -  0
+    - 非メトリック # (5)       -  3 -  2 -  0 -  0
+    - 10の指数 # (20)          -  0 - 18 -  2 -  0
+  - 物質 # (44)                -  9 - 27 -  8 -  0
+    - 集合状態 # (11)          -  1 -  6 -  4 -  0
+    - 相転移 # (6)             -  1 -  5 -  0 -  0
+    - 化学分類 # (6)           -  1 -  3 -  2 -  0
+    - 元素 # (18)              -  6 - 11 -  1 -  0
+自然: # (40)                                       - 10 - 22 -  8 -  0
+  - 銀河 # (8)                 -  1 -  6 -  1 -  0
+  - 地球 # (32)                -  9 - 16 -  7 -  0
+    - 水圏 # (8)               -  3 -  4 -  1 -  0
+    - 大気 # (10)              -  1 -  7 -  2 -  0
+    - 鉱物 # (12)              -  5 -  4 -  3 -  0
+生命: # (355)                                      - 80 -192 - 81 -  0
+  - 植物 # (46)                - 18 - 23 -  4 -  0
+    - 部分 # (12)              -  3 -  9 -  0 -  0
+    - 花 # (9)                 -  4 -  2 -  2 -  0
+    - 野菜 # (6)               -  4 -  1 -  1 -  0
+    - 穀物 # (10)              -  3 -  6 -  1 -  0
+    - その他の特定の植物 # (3) -  3 -  0 -  0 -  0
+  - 動物 # (94)                - 31 - 45 - 17 -  0
+    - 動物分類 # (7)           -  2 -  4 -  0 -  0
+    - 特定動物 # (33)          - 19 - 10 -  4 -  0
+    - 身体部分 # (33)          -  3 - 20 - 10 -  0
+    - 肌派生部分 # (6)         -  1 -  4 -  1 -  0
+    - 内臓 # (13)              -  6 -  6 -  1 -  0
+  - 生理学 # (37)              -  7 - 22 -  8 -  0
+    - 消化 # (8)               -  2 -  5 -  1 -  0
+    - 生殖 # (10)              -  1 -  5 -  4 -  0
+    - 健康/死亡 # (5)          -  2 -  3 -  0 -  0
+    - 振る舞い # (10)          -  0 -  8 -  2 -  0
+  - 知覚 # (44)                -  6 - 24 - 14 -  0
+    - 聴覚 # (7)               -  0 -  5 -  2 -  0
+    - 視覚 # (19)              -  1 - 11 -  7 -  0
+    - 臭気 # (2)               -  1 -  1 -  0 -  0
+    - 味 # (4)                 -  1 -  2 -  1 -  0
+    - その他 # (4)             -  2 -  1 -  1 -  0
+  - 感情 # (35)                -  5 - 20 - 10 -  0
+  - 態度 # (20)                -  1 - 12 -  7 -  0
+  - 評価 # (46)                -  7 - 27 - 12 -  0
+  - 家族 # (17)                -  3 -  7 -  7 -  0
+文明: # (316)                                      - 72 -170 - 73 -  1
+  - 社会制度 # (25)            -  3 - 16 -  6 -  0
+    - 政府 # (8)               -  2 -  5 -  1 -  0
+    - 法 # (5)                 -  1 -  3 -  1 -  0
+    - 戦争 # (5)               -  0 -  3 -  2 -  0
+  - 経済 # (33)                -  5 - 15 - 13 -  0
+    - 資産 # (11)              -  0 -  7 -  4 -  0
+    - マネー # (6)             -  0 -  2 -  4 -  0
+    - 貿易 # (7)               -  1 -  3 -  3 -  0
+    - ビジネス # (9)           -  4 -  3 -  2 -  0
+  - 国家、文化 # (2)           -  0 -  1 -  1 -  0
+  - 地理 # (12)                -  2 -  4 -  6 -  0
+  - 多民族文化 # (11)          -  2 -  7 -  2 -  0
+  - 国籍 # (34)                -  4 - 20 - 10 -  0
+  - 宗教 # (12)                -  0 -  8 -  4 -  0
+    - 特定の宗教 # (5)         -  0 -  2 -  3 -  0
+  - 芸術 # (18)                -  6 -  7 -  5 -  0
+  - 技術過程 # (26)            -  3 - 14 -  9 -  0
+  - 人工物質 # (41)            - 19 - 20 -  2 -  0
+    - 材料 # (15)              -  7 -  7 -  1 -  0
+    - 飲料 # (8)               -  4 -  4 -  0 -  0
+    - 食品 # (16)              -  7 -  8 -  1 -  0
+  - 道具 # (44)                - 14 - 25 -  5 -  0
+    - ツール、装置 # (23)      -  5 - 16 -  2 -  0
+    - 格納 # (12)              -  7 -  3 -  2 -  0
+    - 機械、器具 # (9)         -  2 -  6 -  1 -  0
+  - 機械部品 # (14)            -  5 -  8 -  1 -  0
+  - 交通 # (15)                -  5 -  7 -  2 -  1
+  - 家 # (16)                  -  1 -  9 -  6 -  0
+  - 衣類 # (13)                -  3 -  9 -  1 -  0
