--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "node lib/step1-xml-parser.js && node lib/step2-xml2js.js && node lib/step3-make-dictionary.js && node lib/step4-integrate-frequency.js && node lib/step5-integrate-thesaurus.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
